[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-scheduler"
version = "0.1.0"
description = "Task scheduling engine for autonomous agents — cron-like recurring jobs, one-time delayed tasks, priority queues, retry logic, MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "croniter>=1.3",
    "click>=8.0",
    "rich>=13.0",
    "mcp>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
agent-scheduler = "agent_scheduler.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_scheduler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
