[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-scheduler"
version = "0.6.0"
description = "Task scheduling engine for autonomous agents — cron-like recurring jobs, one-time delayed tasks, priority queues, retry logic, webhooks, templates, job groups, API key auth, SQLite backend, REST API, MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "croniter>=2.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "PyYAML>=6.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
api = ["starlette>=0.28", "uvicorn>=0.20"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0", "respx>=0.20"]

[project.scripts]
agent-scheduler = "agent_scheduler.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_scheduler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
